# tarcie

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
doc/: TARSYSTEM.md  tcSYSTEM.md
doc/system/: 00-overview.md  01-architecture.md  01-overview.md  02-architecture.md  03-command-reference.md  04-data-model.md  05-queue-system.md  06-flush-pipeline.md  07-configuration.md  08-constraints.md  09-error-handling.md  10-testing.md  11-handover.md  30-data.md  90-appendices.md  BUILD.sh  _index.md  validate_snapshots.sh
docs/: tarcie_architecture_spec.md  tarcie_extended_roadmap.md
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constraints.rs  flusher.rs  main.rs  model.rs  state.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/queue/: jsonl.rs
src-tauri/src/sink/: client.rs  config.rs
src-tauri/src/util/: paths.rs
