[package]
name = "tarcie"
version = "1.0.0"
edition = "2021"
description = "Friction-free capture tool for notes and markers"
authors = ["Boswell"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
regex = "1"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
